--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,10 @@ Primary use:
 /*---------------------------------------------*/
 .container {max-width: 1200px;}
 
-
+.logo {
+	height: 30%;
+	width: 30%;
+}
 
 /*//////////////////////////////////////////////////////////////////
 [ Form ]*/
@@ -418,7 +421,10 @@ Primary use:
 
 /*//////////////////////////////////////////////////////////////////
 [ Background ]*/
-.bg0 {background-color: #fff;}
+.bg0 {
+	background-color: #fff;
+	opacity: 0.6;
+}
 
 .bg-img1 {
   background-position: center;
@@ -467,12 +473,12 @@ Primary use:
   height: 100%;
   top: 0;
   left: 0;
-  background: #30bab6;
+  background: #fff;
   background: -webkit-linear-gradient(top, #009efd, #2af598);
   background: -o-linear-gradient(top, #009efd, #2af598);
   background: -moz-linear-gradient(top, #009efd, #2af598);
   background: linear-gradient(top, #009efd, #2af598);
-  opacity: 0.8;
+  opacity: 0.2;
 }
 
 /*---------------------------------------------*/
@@ -482,11 +488,18 @@ Primary use:
   padding-right: 20px;
   padding-left: 20px;
 }
-
+.how-btn2 {
+  border-radius: 25px;
+  background-color: #00a1b2;
+  padding-right: 20px;
+  padding-left: 20px;
+} 
 .how-btn1:hover {
   background-color: #333333;
 }
-
+.how-btn2:hover {
+  background-color: #b20000;
+}
 /*---------------------------------------------*/
 .wrappic1 {
   display: block;
